tests/baselines/reference/objectBindingPatternKeywordIdentifiers01.errors.txt
objectBindingPatternKeywordIdentifiers01.ts(1,13): error TS1005: ':' expected.


==== objectBindingPatternKeywordIdentifiers01.ts (1 errors) ====
    var { while } = { while: 1 }
                ~
!!! error TS1005: ':' expected.